--- a/index.html
+++ b/index.html
@@ -7,11 +7,12 @@
 <body class="w3-content" style="max-width:1300px">
 
 <!-- Top Nav  -->  
-<div class="w3-bar w3-black w3-top">
-  <a href="https://docs.google.com/document/d/1BzA-Aj06QZOiWqHrNrn-I28GfDlZpPwIP-Y1_msRwxE/edit?usp=sharing" target="_blank" class="w3-bar-item w3-button w3-mobile">Rubric</a>
+<xdiv class="w3-bar w3-black w3-top">
+  <a href="https://docs.google.com/document/d/1BzA-Aj06QZOiWqHrNrn-I28GfDlZpPwIP-Y1_msRwxE/edit?usp=sharing" target="_blank" class="w3-bar-item w3-button w3-mobile">Mid-Term Rubric</a>
+  <a href="https://docs.google.com/document/d/1E8cCEj4x_9DEZuiL5U5qhNlR05ZseoBfEd-ei7Q6bpA/edit?usp=sharing" target="_blank" class="w3-bar-item w3-button w3-mobile">Final Rubric</a>    
   <!--<a href="#" class="w3-bar-item w3-button w3-mobile">Scratch Projects</a> -->
   <a href="codedisplay.html" target="_blank" class="w3-bar-item w3-button w3-mobile">Python Projects</a>
-  <a href="#" class="w3-bar-item w3-button w3-mobile">Processing Projects</a> 
+  <a href="SubSiteFolderCS160/ReadingsPage.html" target="_blank" class="w3-bar-item w3-button w3-mobile">Reading Assignments</a> 
 </div>  
    
 <!-- First Grid: Logo & About -->
@@ -28,21 +29,17 @@
         
         <img src="images/downsizedImages/GreatSandDunesPano.jpg" style="width:100%">
         <a href="https://docs.google.com/document/d/1BzA-Aj06QZOiWqHrNrn-I28GfDlZpPwIP-Y1_msRwxE/edit?usp=sharing" target="_blank" class="w3-button w3-black w3-block w3-hover-blue-grey w3-padding-16">6th Week Check</a>
-        <a href="https://scratch.mit.edu/projects/331549006" target="_blank" class="w3-button w3-black w3-block w3-hover-teal w3-padding-16">Scratch Project 1</a>
-        <a href="https://scratch.mit.edu/projects/333407264" target="_blank" class="w3-button w3-black w3-block w3-hover-teal w3-padding-16">Scratch Project 2</a>
-        <a href="https://scratch.mit.edu/projects/335538209" target="_blank" class="w3-button w3-black w3-block w3-hover-teal w3-padding-16">Scratch Project 3</a>       
-        <a href="https://docs.google.com/document/d/1jzotic0JPLNSXJc3z8HoFGJfhEN5lreEKNi18DYWVOY/edit?usp=sharing" target="_blank" class="w3-button w3-black w3-block w3-hover-teal w3-padding-16">Reading Questions For CODE</a>
-        <a href="https://docs.google.com/document/d/1rSOljbLDRdNnBtoyNWhg4BHTSjCuoKZQuY7_yLODOng/edit?usp=sharing" target="_blank" class="w3-button w3-black w3-block w3-hover-teal w3-padding-16">Reading Questions For Dreaming in Code</a>
+        <a href="https://docs.google.com/document/d/1E8cCEj4x_9DEZuiL5U5qhNlR05ZseoBfEd-ei7Q6bpA/edit?usp=sharing" target="_blank" class="w3-button w3-black w3-block w3-hover-blue-grey w3-padding-16">End of Term Check</a>       
+        <a href="SubSiteFolderCS160/ReadingsPage.html" target="_blank" class="w3-button w3-black w3-block w3-hover-teal w3-padding-16">Reading Assignments</a>
+        <a href="scratchProjects.html" target="_blank" class="w3-button w3-black w3-block w3-hover-teal w3-padding-16">Scratch Projects</a>
         <a href="https://docs.google.com/document/d/1c_GTWWZSkjhWXVyFg7YQ4dkE6uu35B5fJSo16xnYMrE/edit?usp=sharing" target="_blank" class="w3-button w3-black w3-block w3-hover-teal w3-padding-16">Degree Pathways</a>
         <a href="https://youtu.be/PBTgCKDzUzc" target="_blank" class="w3-button w3-black w3-block w3-hover-teal w3-padding-16">App Inventor Youtube Video</a>
-        <a href="empty-example/processing.html" target="_blank" class="w3-button w3-black w3-block w3-hover-teal w3-padding-16">Processing Program 1</a>
-        <a href="empty-example/processing2.html" target="_blank" class="w3-button w3-black w3-block w3-hover-teal w3-padding-16">Processing Program 2</a>
+        <a href="processingPrograms.html" target="_blank" class="w3-button w3-black w3-block w3-hover-teal w3-padding-16">Processing Programs</a>
+        <a href="#" target="_blank" class="w3-button w3-black w3-block w3-hover-teal w3-padding-16">Code Book Circuits</a>
         <a href="codedisplay.html" target="_blank" class="w3-button w3-black w3-block w3-hover-teal w3-padding-16">Python Code</a>
-        <a href="codehs.html" target="_blank" class="w3-button w3-black w3-block w3-hover-teal w3-padding-16">Python CodeHS</a>
-        <a href="rockpaperscissors.html" target="_blank" class="w3-button w3-black w3-block w3-hover-teal w3-padding-16">Python Rock Paper Scissors</a>
-        <a href="mastermind.html" target="_blank" class="w3-button w3-black w3-block w3-hover-teal w3-padding-16">Python Mastermind</a>
-        <a href="hangman.html" target="_blank" class="w3-button w3-black w3-block w3-hover-teal w3-padding-16">Python Hangman</a>
-        <a href="#" target="_blank" class="w3-button w3-black w3-block w3-hover-teal w3-padding-16">Python Number-Base Conversion</a>
+        <a href="#" target="_blank" class="w3-button w3-black w3-block w3-hover-teal w3-padding-16">Elements Project Chapter 1</a>
+        <a href="#" target="_blank" class="w3-button w3-black w3-block w3-hover-teal w3-padding-16">Code Combat</a>
+        <a href="#" target="_blank" class="w3-button w3-black w3-block w3-hover-teal w3-padding-16">Robot Treasure Hunt</a>
         <a href="photogallery.html" target="_blank" class="w3-button w3-black w3-block w3-hover-teal w3-padding-16">W3 Framework Page</a>
         <!--Add Mobile Responsiveness to the Play Space button  -->
         
@@ -70,125 +67,7 @@
   </div>
 </div>
  
-<!-- Second Grid: Work & Resume -->
-<!--
-<div class="w3-row">
-  <div class="w3-half w3-light-grey w3-center" style="min-height:800px" id="work">
-    <div class="w3-padding-64">
-      <h2>My Work</h2>
-      <p>Some of my latest projects.</p>
-    </div>
-    <div class="w3-row">
-      <div class="w3-half">
-        <img src="/w3images/coffee.jpg" style="width:100%">
-      </div>
-      <div class="w3-half">
-        <img src="/w3images/workbench.jpg" style="width:100%">
-      </div>
-    </div>
-    <div class="w3-row w3-hide-small">
-      <div class="w3-half">
-        <img src="/w3images/workbench.jpg" style="width:100%">
-      </div>
-      <div class="w3-half">
-        <img src="/w3images/coffee.jpg" style="width:100%">
-      </div>
-    </div>
 
-    <div class="w3-row w3-hide-small">
-      <div class="w3-half">
-        <img src="/w3images/sound.jpg" style="width:100%">
-      </div>
-      <div class="w3-half">
-        <img src="/w3images/workbench.jpg" style="width:100%">
-      </div>
-    </div><br>
-    <p>Just call me awesome.</p>
-  </div>
-  <div class="w3-half w3-indigo w3-container" style="min-height:800px">
-    <div class="w3-padding-64 w3-center">
-      <h2>Resume</h2>
-      <p>A draft from my CV</p>
-      <div class="w3-container w3-responsive">
-        <table class="w3-table">
-          <tr>
-            <th>Year</th>
-            <th>Title</th>
-            <th>Where</th>
-          </tr>
-          <tr class="w3-white">
-            <td>2012-2016</td>
-            <td>The rest is history..</td>
-            <td>Lorem ipsum</td>
-          </tr>
-          <tr>
-            <td>2009-2012</td>
-            <td>Started my own company</td>
-            <td>My Garage</td>
-          </tr>
-          <tr class="w3-white">
-            <td>2008-2009</td>
-            <td>Started working for Lorem</td>
-            <td>London, UK</td>
-          </tr>
-          <tr>
-            <td>2005-2008</td>
-            <td>Degree in Bachelor of Design</td>
-            <td>Harvard, USA</td>
-          </tr>
-          <tr class="w3-white">
-            <td>2002-2005</td>
-            <td>Degree in Bachelor of Business</td>
-            <td>RMIT University, Melbourne, Australia</td>
-          </tr>
-          <tr class="w3-hide-medium">
-            <td>2002-2005</td>
-            <td>Degree in Bachelor of Business</td>
-            <td>RMIT University, Melbourne, Australia</td>
-          </tr>
-        </table>
-      </div>
-    </div>
-  </div>
-</div>
--->
-<!-- Third Grid: Swing By & Contact -->
-<!--
-<div class="w3-row" id="contact">
-  <div class="w3-half w3-dark-grey w3-container w3-center" style="height:700px">
-    <div class="w3-padding-64">
-      <h1>Swing By</h1>
-    </div>
-    <div class="w3-padding-64">
-      <p>..for a cup of coffee, or whatever.</p>
-      <p>Chicago, US</p>
-      <p>+00 1515151515</p>
-      <p>test@test.com</p>
-    </div>
-  </div>
-  <div class="w3-half w3-teal w3-container" style="height:700px">
-    <div class="w3-padding-64 w3-padding-large">
-      <h1>Contact</h1>
-      <p class="w3-opacity">GET IN TOUCH</p>
-      <form class="w3-container w3-card w3-padding-32 w3-white" action="/action_page.php" target="_blank">
-        <div class="w3-section">
-          <label>Name</label>
-          <input class="w3-input" style="width:100%;" type="text" required name="Name">
-        </div>
-        <div class="w3-section">
-          <label>Email</label>
-          <input class="w3-input" style="width:100%;" type="text" required name="Email">
-        </div>
-        <div class="w3-section">
-          <label>Message</label>
-          <input class="w3-input" style="width:100%;" type="text" required name="Message">
-        </div>
-        <button type="submit" class="w3-button w3-teal w3-right">Send</button>
-      </form>
-    </div>
-  </div>
-</div>
--->    
 <!-- Footer -->
 <footer class="w3-container w3-black w3-padding-16">
   <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a></p>
