--- a/DecimalConversion.html
+++ b/DecimalConversion.html
@@ -53,7 +53,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
       <h1>Decimal Converter<h1>
       <h5 class="w3-padding-32">Hit the Play button at top to run the code. Follow the prompts on the console.</h5>
 
-        <iframe height="400px" width="100%" src="https://repl.it/@IanSnyder1/Hangman?lite=true" scrolling="no" frameborder="no" allowtransparency="true" allowfullscreen="true" sandbox="allow-forms allow-pointer-lock allow-popups allow-same-origin allow-scripts allow-modals"></iframe>
+        <iframe height="400px" width="100%" src="https://repl.it/@IanSnyder1/NumberConverter?lite=true" scrolling="no" frameborder="no" allowtransparency="true" allowfullscreen="true" sandbox="allow-forms allow-pointer-lock allow-popups allow-same-origin allow-scripts allow-modals"></iframe>
         
     </div>
 
