--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <img src="images/downsizedImages/GreatSandDunesPano.jpg" style="width:100%">
         <a href="https://docs.google.com/document/d/1BzA-Aj06QZOiWqHrNrn-I28GfDlZpPwIP-Y1_msRwxE/edit?usp=sharing" target="_blank" class="w3-button w3-black w3-block w3-hover-blue-grey w3-padding-16">6th Week Check</a>
         <a href="https://docs.google.com/document/d/1E8cCEj4x_9DEZuiL5U5qhNlR05ZseoBfEd-ei7Q6bpA/edit?usp=sharing" target="_blank" class="w3-button w3-black w3-block w3-hover-blue-grey w3-padding-16">End of Term Check</a>       
-        <a href="#" target="_blank" class="w3-button w3-black w3-block w3-hover-blue-grey w3-padding-16">Final Exam Response</a>       
+        <a href="https://docs.google.com/document/d/1Ihczo61Z5s46bbBX-Rf6tVtmxvhzZG7oyjd_MFMK8BA/edit?usp=sharing" target="_blank" class="w3-button w3-black w3-block w3-hover-blue-grey w3-padding-16">Final Exam Response</a>       
         <a href="SubSiteFolderCS160/ReadingsPage.html" target="_blank" class="w3-button w3-black w3-block w3-hover-teal w3-padding-16">Reading Assignments</a>
         <a href="scratchProjects.html" target="_blank" class="w3-button w3-black w3-block w3-hover-teal w3-padding-16">Scratch Projects</a>
         <a href="https://docs.google.com/document/d/1c_GTWWZSkjhWXVyFg7YQ4dkE6uu35B5fJSo16xnYMrE/edit?usp=sharing" target="_blank" class="w3-button w3-black w3-block w3-hover-teal w3-padding-16">Degree Pathways</a>
