--- a/mastermind.html
+++ b/mastermind.html
@@ -23,6 +23,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
     <a href="#" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-white">Mastermind</a>
     <a href="codehs.html" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">CodeHS</a>
     <a href="hangman.html" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Hangman</a>
+    <a href="DecimalConversion.html" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Decimal Conversion</a>
     <!-- <a href="#" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Link 3</a> 
     <a href="#" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Link 4</a> -->
   </div>
