--- a/processingPrograms.html
+++ b/processingPrograms.html
@@ -8,7 +8,7 @@
 
 <!-- Top Nav -->
 <div class="w3-bar w3-black w3-top">
-    <a href="index.html" target="_blank" class="w3-bar-item w3-button w3-mobile">Home Page</a>
+    <a href="index.html"  class="w3-bar-item w3-button w3-mobile">Home Page</a>
     <a href="https://docs.google.com/document/d/1BzA-Aj06QZOiWqHrNrn-I28GfDlZpPwIP-Y1_msRwxE/edit?usp=sharing" target="_blank" class="w3-bar-item w3-button w3-mobile">Mid-Term Rubric</a>
   <a href="https://docs.google.com/document/d/1E8cCEj4x_9DEZuiL5U5qhNlR05ZseoBfEd-ei7Q6bpA/edit?usp=sharing" target="_blank" class="w3-bar-item w3-button w3-mobile">Final Rubric</a>    
   <a href="scratchProjects.html" target="_blank" class="w3-bar-item w3-button w3-mobile">Scratch Projects</a>    
