--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
     <div class="w3-padding-16">
         
         <img src="../images/downsizedImages/GreatSandDunesPano.jpg" style="width: 100%">  
-        <a href="https://docs.google.com/document/d/1uTI3FN6e8nsNuJtNEqoDWA-GpNWf3pnhP9Q4N9BEUQU/edit?usp=sharing" target="_blank" class="w3-button w3-black w3-block w3-hover-teal w3-padding-16">Chapter 1</a>
+        <a href="https://docs.google.com/document/d/1mSxlajq2oFknZhs1FSC2C5I39zD0IQDBBX3Uctf7AWs/edit?usp=sharing" target="_blank" class="w3-button w3-black w3-block w3-hover-teal w3-padding-16">Introduction</a>
+        <a href="https://docs.google.com/document/d/111i1RfbpBBvuucPcaRFa3BCrCqQQ8m7cwo3nyV27KcY/edit?usp=sharing" target="_blank" class="w3-button w3-black w3-block w3-hover-teal w3-padding-16">Chapter 1</a>
         <a href="https://docs.google.com/document/d/1uTI3FN6e8nsNuJtNEqoDWA-GpNWf3pnhP9Q4N9BEUQU/edit?usp=sharing" target="_blank" class="w3-button w3-black w3-block w3-hover-teal w3-padding-16">Chapter 2</a>
         <a href="https://docs.google.com/document/d/1uTI3FN6e8nsNuJtNEqoDWA-GpNWf3pnhP9Q4N9BEUQU/edit?usp=sharing" target="_blank" class="w3-button w3-black w3-block w3-hover-teal w3-padding-16">Chapter 3</a>
         <a href="https://docs.google.com/document/d/1uTI3FN6e8nsNuJtNEqoDWA-GpNWf3pnhP9Q4N9BEUQU/edit?usp=sharing" target="_blank" class="w3-button w3-black w3-block w3-hover-teal w3-padding-16">Chapter 4</a>
