--- a/photogallery.html
+++ b/photogallery.html
@@ -31,7 +31,7 @@
 <!-- Header -->
     
     <div class="w3-display-container w3-center">
-        <img src="images/downsizedImages/MeGoProThielsen%20(1%20of%201).jpg" alt="Me and my dog." class="w3-hide-small w3-hide-medium" style="width:100%; max-width:50%">
+        <img src="images/downsizedImages/reflectionsparksbw.jpg" alt="Me and my dog." class="w3-hide-small w3-hide-medium w3-margin-top" style="width:100%; max-width:50%">
         <div class="w3-display-container w3-display-middle w3-padding-large w3-border w3-wide w3-text-white w3-center w3-hide-small w3-hide-medium" style="text-shadow:1px 1px 0 #000;"><h1>Ian Snyder<br> Photography</h1></div>
     </div>
     
