--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <!--
         <a href="" target="_blank" class="w3-button w3-black w3-block w3-hover-teal w3-padding-16"> </a>
         -->
-        <a href="IanChris.html" target="_blank" class="w3-button w3-black w3-block w3-hover-teal w3-padding-16">Ian &amp; Chris's Site </a>
+        <a href="IanChris.html" target="_blank" class="w3-button w3-black w3-block w3-hover-teal w3-padding-16">Computer Science Portfolio </a>
        
         
     </div>
