--- a/gallerypage.html
+++ b/gallerypage.html
@@ -25,6 +25,7 @@ h1 {letter-spacing: 6px}
     <div class="w3-bar w3-border">
       <a href="ianSnyderPhotography.html" class="w3-bar-item w3-button w3-light-grey">home</a>
       <a href="#" class="w3-bar-item w3-button w3-dark-grey">photo gallery</a>
+      <a href="instagramPortfolio.html" class="w3-bar-item w3-button w3-light-grey">instagram</a>
       <a href="#" class="w3-bar-item w3-button w3-light-grey">about me</a>
       <a href="#" class="w3-bar-item w3-button w3-light-grey">contact</a>
     </div>
@@ -57,30 +58,7 @@ h1 {letter-spacing: 6px}
 <!-- End Page Content -->
 </div>
     
-      <div id="contact-section" data-brackets-id='171' class="w3-light-grey w3-padding-large w3-padding-32 w3-margin-top" id="contact">
-    <h3 data-brackets-id='172' class="w3-center">Contact</h3>
-    <hr data-brackets-id='173'>
-    <p data-brackets-id='174'>All photos are property of Ian Snyder. For prints and permission to use please contact me. I am available for hire if the job is right.</p>
 
-    <form data-brackets-id='175' action="/action_page.php" target="_blank">
-      <div data-brackets-id='176' class="w3-section">
-        <label data-brackets-id='177'>Name</label>
-        <input data-brackets-id='178' class="w3-input w3-border" type="text" required name="Name">
-      </div>
-      <div data-brackets-id='179' class="w3-section">
-        <label data-brackets-id='180'>Email</label>
-        <input data-brackets-id='181' class="w3-input w3-border" type="text" required name="Email">
-      </div>
-      <div data-brackets-id='182' class="w3-section">
-        <label data-brackets-id='183'>Message</label>
-        <textarea id="183" name="subject" placeholder="Write something.." style="height:200px; width: 100%;"></textarea>
-          
-      </div>
-      <button data-brackets-id='185' type="submit" class="w3-button w3-block w3-dark-grey">Send</button>
-    </form><br data-brackets-id='186'>
-    <p data-brackets-id='187'>Powered by <a data-brackets-id='188' href="https://www.w3schools.com/w3css/default.asp" target="_blank" class="w3-hover-text-green">w3.css</a></p>
-
-  </div>
 
 <!-- Footer -->
 <footer class="w3-container w3-padding-64 w3-light-grey w3-center w3-large"> 
