--- a/ianSnyderPhotography.html
+++ b/ianSnyderPhotography.html
@@ -25,6 +25,7 @@
     <div class="w3-bar w3-border">
       <a href="ianSnyderPhotography.html" class="w3-bar-item w3-button w3-dark-grey">home</a>
       <a href="gallerypage.html" class="w3-bar-item w3-button w3-light-grey">photo gallery</a>
+      <a href="instagramPortfolio.html" class="w3-bar-item w3-button w3-light-grey">instagram</a>
       <a href="#" class="w3-bar-item w3-button w3-light-grey">about me</a>
       <a href="#" class="w3-bar-item w3-button w3-light-grey">contact</a>
     </div>
